<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/que1"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <RadioGroup
        android:id="@+id/radioGroup1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView1"
        android:layout_below="@+id/textView1"
        android:layout_marginLeft="18dp" >

        <RadioButton
            android:id="@+id/que1_ans1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/que1_ans1" />

        <RadioButton
            android:id="@+id/wrongRadio1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/que1_ans2" />
    </RadioGroup>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView1"
        android:layout_below="@+id/radioGroup1"
        android:layout_marginTop="30dp"
        android:text="@string/que2"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <RadioGroup
        android:id="@+id/radioGroup2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/radioGroup1"
        android:layout_below="@+id/textView2"
        android:layout_marginTop="10dp" >

        <RadioButton
            android:id="@+id/wrongRadio2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/que2_ans1" />

        <RadioButton
            android:id="@+id/que2_ans2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/que2_ans2" />
    </RadioGroup>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView2"
        android:layout_below="@+id/radioGroup2"
        android:layout_marginTop="30dp"
        android:text="@string/que3"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <RadioGroup
        android:id="@+id/radioGroup3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/radioGroup2"
        android:layout_below="@+id/textView3"
        android:layout_marginTop="14dp" >

        <RadioButton
            android:id="@+id/wrongRadio3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/que3_ans1" />

        <RadioButton
            android:id="@+id/que3_ans2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/que3_ans2" />
    </RadioGroup>

    <Button
        android:id="@+id/submitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="22dp"
        android:text="@string/submit_btn" />

</RelativeLayout>